Added first AR-Nav implementation

--- a/james_ar_nav/CMakeLists.txt
+++ b/james_ar_nav/CMakeLists.txt
@@ -181,6 +181,12 @@ include_directories(
 #   DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION}
 # )
 
+install(DIRECTORY cfg launch
+  DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION})
+
+catkin_install_python(PROGRAMS nodes/your_node scripts/another_script
+                      DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION})
+
 #############
 ## Testing ##
 #############
