--- a/james_ar_nav/CMakeLists.txt
+++ b/james_ar_nav/CMakeLists.txt
@@ -184,7 +184,7 @@ include_directories(
 install(DIRECTORY cfg launch
   DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION})
 
-catkin_install_python(PROGRAMS nodes/your_node scripts/another_script
+catkin_install_python(PROGRAMS bin/ar_localizer
                       DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION})
 
 #############
